2002-10-03  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-calendar.el (mhc-calendar-count-days-region): Display
	number of weeks. Thanks to Mr. KOIE Hidetaka.

2002-10-03  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* icons/Vacation.xpm: Correct invalid data.

2002-10-02  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* emacs/mhc.el: Make use of the image feature of Meadow2.

2002-09-26  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-summary.el (mhc-summary-line-format): Change default
	value for 'english. 
	(mhc-summary-line-format-alist): Add `S' rule.
	(mhc-todo-string-deadline-day): Remove no good space.
	(mhc-summary-make-memo-list): Support `category-predicate'.

2002-09-25  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-mode-menu-spec): Bind `mhc-reset'.
	(mhc-mode-map): Ditto.
	(mhc-mode): Add doc-sting for `mhc-reset'.
	(mhc-reset): New function.

	* emacs/mhc-calendar.el (mhc-calendar-mode-map): Bind `mhc-reset'.
	(mhc-calendar-mode-menu-spec): Ditto.
	(mhc-calendar-mode): Add doc-sting for `mhc-reset'.
	(mhc-calendar-setup): Guard from illegal value.

2002-09-24  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-scan-month): Use `frame-width' instead of
	`window-width'. Guard error of make-string with minus count.

	* emacs/mhc-summary.el (mhc-summary/cw-separator) 
	(mhc-summary/cw-week): New variables.
	(mhc-summary/insert-separator, mhc-summary-make-contents):
	Support `mhc-summary/cw-separator'.
	(mhc-summary/line-day-of-week-string) 
	(mhc-summary/line-day-of-week-ja-string): Use
	`mhc-summary/cw-week' insted of 'mhc-summary-use-cw'.
	(mhc-summary/make-string): New inline function.
	(mhc-summary/insert-separator): Use `frame-width' instead of
	`window-width'. Guard error of make-string with minus count.

	* emacs/mhc-face.el (mhc-symbol-face-alist-internal): Add
	`mhc-summary-face-cw'.

2002-09-23  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-scan-month): Use `mhc-calendar-width'.
